@@ -388,10 +388,10 @@ MAIN GOAL for 0.6.0:
 			variable, so debug output should indicate which variables
 			were set and which were not set.
 
-	[/]	reset		Resets the emulation. (Reloads files, clears RAM, etc.)
+	[X]	reset		Resets the emulation. (Reloads files, clears RAM, etc.)
 				step = 0.
 
-	[ ]	step		single-step (Paused)
+	[X]	step		single-step (Paused)
 
    [/]	RAM component:
 	[ ]  Make the save/load of state more efficient. Right now, it's a hex dump! Yuck.
